--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./scss/main.css">
 </head>
 <body>
+    <h1>Hello</h1>
         <select id="options" name="city" class="box2" required></select>
         <select id="options" name="country" class="box" required></select>
   
