--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="./scss/main.css">
 </head>
 <body>
-    <h1>Hello</h1>
-    <h2>H@</h2>
-        <select id="options" name="city" class="box2" required></select>
-        <select id="options" name="country" class="box" required></select>
-  
+    <section class="main-box">
+        <select id="cities" name="city" class="" required></select>
+        <select id="country" name="country" class="" required></select>
+    </section>
+
     <script src="dist/bundle.js"></script>
 </body>
 </html>
