--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="stylesheet" href="./scss/main.css">
 </head>
+
 <body>
     <section class="main-box">
-        <select id="cities" name="city" class="" required></select>
-        <select id="country" name="country" class="" required></select>
+        <div class="main-box__inner">
+            <select id="cities" name="city" class="main-box__dropdown" required></select>
+            <select id="country" name="country" class="main-box__dropdown" required></select>
+        </div>
+
     </section>
 
     <script src="dist/bundle.js"></script>
 </body>
+
 </html>
