--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <section class="main-box">
         <div class="main-box__inner">
-            <select id="cities" name="city" class="main-box__dropdown" required></select>
-            <select id="country" name="country" class="main-box__dropdown" required></select>
+            <select id="cities" name="city" class="main-box__dropdown"></select>
+            <select id="country" name="country" class="main-box__dropdown"></select>
         </div>
-
+        <button id="reset">RESET</button>
     </section>
 
     <script src="dist/bundle.js"></script>
