--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
     <link rel="stylesheet" href="./scss/main.css">
 </head>
 
-<body>
+<body>  
     <section class="main-box">
         <div class="main-box__inner">
-            <select id="cities" name="city" class="main-box__dropdown"></select>
-            <select id="country" name="country" class="main-box__dropdown"></select>
+            <select id="cities" name="city" class="main-box__dropdown">
+                <option value="" selected disabled>выберите город</option>
+            </select>
+            <select id="country" name="country" class="main-box__dropdown">
+                <option value="" selected disabled>выберите страну</option>
+            </select>
         </div>
-        <button id="reset">RESET</button>
+
+        <div class="weather"></div>
+      
+        
+
+        <!-- <button id="reset">RESET</button> -->
     </section>
 
     <script src="dist/bundle.js"></script>
