--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./scss/main.css">
 </head>
 
-<body>  
+<body>
     <section class="main-box">
         <div class="main-box__inner">
             <select id="cities" name="city" class="main-box__dropdown">
@@ -20,10 +20,11 @@
         </div>
 
         <div class="weather"></div>
-      
-        
 
-        <!-- <button id="reset">RESET</button> -->
+        <div class="reset">
+            <button id="reset" class="reset__button">RESET</button>
+        </div>
+
     </section>
 
     <script src="dist/bundle.js"></script>
